# dyros_jet_avatar

./: .gitignore  README.md
dyros_jet_controller/: CMakeLists.txt  conanfile.txt  retarget_config.toml
dyros_jet_controller/include/: math_type_define.h
dyros_jet_controller/include/dyros_jet_controller/: control_base.h  dyros_jet_model.h  quadraticprogram.h  retarget_controller.h  walking_controller_hw.h
dyros_jet_controller/src/: control_base.cpp  dyros_jet_model.cpp  quadraticprogram.cpp  retarget_controller.cpp  walking_controller_hw.cpp
dyros_jet_description/robots/: dyros_jet_robot_hw.xml
